--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <table Cellpadding="8" border="1"
 <tr>
 <td bgcolor="yellow"<td colspan="2"<p style="color:red;"<tr><center>
-<a href="https://t.me/Zaphkiel_ES"> <img src="https://raw.githubusercontent.com/zaphkieles/hosting/gh-pages/imagencabecera.png" width="500" height="" </a>
+<a href="https://t.me/Zaphkiel_ES"> <img src="https://raw.githubusercontent.com/zaphkieles/zaphkiel/main/zaphkiel.png" width="500" height="" </a>
 </center></tr>
 
-<td bgcolor="yellow"<td><right>Ficha de Enlaces:</td><td bgcolor="cyan"<td><a style="color:#0000FF;"><b>EVENTOS DEPORTIVOS / <i>Pág. de Enlaces Varios</i></b></td></tr>
+<td bgcolor="yellow"<td><right>Ficha:</td><td bgcolor="cyan"<td><a style="color:#0000FF;"><b>Ficha del sitio</i></b></td></tr>
 <td bgcolor="yellow"<td>Actualización:</td><td bgcolor="cyan"<td><a style="color:#FF0000;"><b><i>
 
 <a>EN MANTENIMIENTO</a>
