--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <a href="https://t.me/Zaphkiel_ES"> <img src="https://raw.githubusercontent.com/zaphkiel/gh-pages/zaphkiel.png" width="500" height="" </a>
 </center></tr>
 
-<td bgcolor="yellow"<td><right>Ficha de Enlaces:</td><td bgcolor="cyan"<td><a style="color:#0000FF;"><b>EVENTOS DEPORTIVOS / <i>Pág. de Enlaces Varios</i></b></td></tr>
+<td bgcolor="yellow"<td><right>Ficha:</td><td bgcolor="cyan"<td><a style="color:#0000FF;"><b>Ficha del sitio</i></b></td></tr>
 <td bgcolor="yellow"<td>Actualización:</td><td bgcolor="cyan"<td><a style="color:#FF0000;"><b><i>
 
 <a>EN MANTENIMIENTO</a>
