--- a/nuevos acestream.html
+++ b/nuevos acestream.html
@@ -1,8 +1,52 @@
+fecha: 5/9/23 16h.
 spanish<BR>
+<a href="acestream://e5fa927d9a017f4523fdb62774a0aec457985bfa" target="_blank">acestream://e5fa927d9a017f4523fdb62774a0aec457985bfa</a>
+<a href="acestream://16150dafbbd4515a8b539a8e21e0f083f86416da" target="_blank">acestream://16150dafbbd4515a8b539a8e21e0f083f86416da</a>
+<a href="acestream://4f945b0ba4206fa2676b61e9eaa465ac3dcc8122" target="_blank">acestream://4f945b0ba4206fa2676b61e9eaa465ac3dcc8122</a>
+<a href="acestream://63ab9528b16e536be0da44d6f5aceac357292b95" target="_blank">acestream://63ab9528b16e536be0da44d6f5aceac357292b95</a>
 
 <BR>elcano<BR>
-
+    <a href="acestream://8587ed8ac36ac477e1d4176d3159a38bd154d4ce" target="_blank">acestream://8587ed8ac36ac477e1d4176d3159a38bd154d4ce</a>
+    <a href="acestream://5a236fbbe6e5bbfec03db548c244a7c858d675c0" target="_blank">acestream://5a236fbbe6e5bbfec03db548c244a7c858d675c0</a>
+    <a href="acestream://78384a676407784df944243eb2f75d937fbcc253" target="_blank">acestream://78384a676407784df944243eb2f75d937fbcc253</a>
+    <a href="acestream://9a4f3ae6563668b7709dac509dedc709441b3fd9" target="_blank">acestream://9a4f3ae6563668b7709dac509dedc709441b3fd9</a>
+    <a href="acestream://aee0a595220e0f1c2fee725fd1dbc602d7152a9a" target="_blank">acestream://aee0a595220e0f1c2fee725fd1dbc602d7152a9a</a>
+    <a href="acestream://4af5952b95d3c2e99fcdc0de2f528d3fcd73e06b" target="_blank">acestream://4af5952b95d3c2e99fcdc0de2f528d3fcd73e06b</a>
+    <a href="acestream://42e83c337ece0af9ca7808859f84c7960e9cb6f5" target="_blank">acestream://42e83c337ece0af9ca7808859f84c7960e9cb6f5</a>
+    <a href="acestream://67654e63b5065cdaa6c8e8d41bb5428b42b32830" target="_blank">acestream://67654e63b5065cdaa6c8e8d41bb5428b42b32830</a>
+    <a href="acestream://5e4cd48c79f991fcbee2de8b9d30c4b16de3b952" target="_blank">acestream://5e4cd48c79f991fcbee2de8b9d30c4b16de3b952</a>
+    <a href="acestream://e6f06d697f66a8fa606c4d61236c24b0d604d917" target="_blank">acestream://e6f06d697f66a8fa606c4d61236c24b0d604d917</a>
+    <a href="acestream://52c8ff01836c294caad8b8c029b53360aa16a4cd" target="_blank">acestream://52c8ff01836c294caad8b8c029b53360aa16a4cd</a>
+    <a href="acestream://c373da9e901d414b7384e671112e64d5a2310c29" target="_blank">acestream://c373da9e901d414b7384e671112e64d5a2310c29</a>
+    <a href="acestream://5a8d60f4c8e558f8ae5acad7c75f455928ce0c2e" target="_blank">acestream://5a8d60f4c8e558f8ae5acad7c75f455928ce0c2e</a>
+    <a href="acestream://d00223931b1854163e24c5c22475015d7d45c112" target="_blank">acestream://d00223931b1854163e24c5c22475015d7d45c112</a>
+    <a href="acestream://3bba7c95857c2502c7e03ced1a6a9b00eb567fa0" target="_blank">acestream://3bba7c95857c2502c7e03ced1a6a9b00eb567fa0</a>
+    <a href="acestream://b1e5abc48195b7ca9b2ee1b352e790eb9f7292e3" target="_blank">acestream://b1e5abc48195b7ca9b2ee1b352e790eb9f7292e3</a>
+    <a href="acestream://859bb6295b8d0f224224d3063d9db7cdeca03122" target="_blank">acestream://859bb6295b8d0f224224d3063d9db7cdeca03122</a>
+    <a href="acestream://e2395d28ad19423212fd3aa0e81f387db3e8bb9f" target="_blank">acestream://e2395d28ad19423212fd3aa0e81f387db3e8bb9f</a>
+    
 <BR>acestreamid<BR>
 
-
+    <a href="acestream://118416583faa3fb4f03800173429b6b844b43a52" target="_blank">acestream://118416583faa3fb4f03800173429b6b844b43a52</a>
+    <a href="acestream://d6f0a6377c31f68b1c1c071e0a8f9f105a455867" target="_blank">acestream://d6f0a6377c31f68b1c1c071e0a8f9f105a455867</a>
+    <a href="acestream://a3bca895c58d3fc7d5e4259d3d5e3cf0291d1914" target="_blank">acestream://a3bca895c58d3fc7d5e4259d3d5e3cf0291d1914</a>
+    <a href="acestream://8dbe2d515e9131fa311353537736f8c94be9b26d" target="_blank">acestream://8dbe2d515e9131fa311353537736f8c94be9b26d</a>
+    <a href="acestream://bb2976a6e2296ffa562c91d761db5460f325bd1a" target="_blank">acestream://bb2976a6e2296ffa562c91d761db5460f325bd1a</a>
+    <a href="acestream://9cbbcabe665de1a0265aada54515213a66ded15f" target="_blank">acestream://9cbbcabe665de1a0265aada54515213a66ded15f</a>
+    <a href="acestream://2ce71f25114cf5fbf04816bcb1be980fb6676064" target="_blank">acestream://2ce71f25114cf5fbf04816bcb1be980fb6676064</a>
+    <a href="acestream://48bee10b883f17c7186d60f1e8022dca0ba41a05" target="_blank">acestream://48bee10b883f17c7186d60f1e8022dca0ba41a05</a>
+    <a href="acestream://1960a9be8ae9e8c755330218eac4c5805466290a" target="_blank">acestream://1960a9be8ae9e8c755330218eac4c5805466290a</a>
+    <a href="acestream://87e95c061cd96586e8e95aaa9e7c001c058e354c" target="_blank">acestream://87e95c061cd96586e8e95aaa9e7c001c058e354c</a>
+    <a href="acestream://cd932e7028b89421d0e999d9136290ee88ac019a" target="_blank">acestream://cd932e7028b89421d0e999d9136290ee88ac019a</a>
+    <a href="acestream://9236972d3495fe6be1cd03217d89c571d48a01b8" target="_blank">acestream://9236972d3495fe6be1cd03217d89c571d48a01b8</a>
+    <a href="acestream://7d8c87e057be98f00f22e23b23fbf08999e4b02f" target="_blank">acestream://7d8c87e057be98f00f22e23b23fbf08999e4b02f</a>
+    <a href="acestream://8ca07071b39185431f8e940ec98d1add9e561639" target="_blank">acestream://8ca07071b39185431f8e940ec98d1add9e561639</a>
+    <a href="acestream://5789ca155323664edd293b848606688edf803f4d" target="_blank">acestream://5789ca155323664edd293b848606688edf803f4d</a>
+    <a href="acestream://9dad717d99b29a05672166258a77c25b57713dd5" target="_blank">acestream://9dad717d99b29a05672166258a77c25b57713dd5</a>
+    <a href="acestream://859bb6295b8d0f224224d3063d9db7cdeca03122" target="_blank">acestream://859bb6295b8d0f224224d3063d9db7cdeca03122</a>
+    <a href="acestream://afeeb4c9336716ed180d0056e71bef27284c0116" target="_blank">acestream://afeeb4c9336716ed180d0056e71bef27284c0116</a>
+    <a href="acestream://ed81c333815247536edfcdb2755147e8c4144d62" target="_blank">acestream://ed81c333815247536edfcdb2755147e8c4144d62</a>
+    <a href="acestream://a1bd609a2d64d1ee4b81af32464b36848fe36541" target="_blank">acestream://a1bd609a2d64d1ee4b81af32464b36848fe36541</a>
+    <a href="acestream://eab7aeef0218ce8b0752e596e4792b69eda4df5e" target="_blank">acestream://eab7aeef0218ce8b0752e596e4792b69eda4df5e</a>
+    
 
