--- a/io.html
+++ b/io.html
@@ -90,7 +90,7 @@
 <a href="acestream://2709d0ab86cb6ce7ba4d3ad188d7fa80668f2924" style="text-decoration:none">M+ Laliga Hypermotion</a><br>
 <a href="acestream://d81b4f2f3fde433539c097b2edc9b587ca47b087" style="text-decoration:none">M+ Laliga Hypermotion</a><br>
 <a href="acestream://4c46585214b23b1d802ef2168060c7649a3894cf" style="text-decoration:none">M+ La Liga Hypermotion (dial 56)</a><br>
-<a href="acestream://06b367c22394a1358c9cefa0cb5d0b64b9b2b3f4" style="text-decoration:none">M+ La Liga Hypermotion (dial 56)</a><br>
+<a href="acestream://06b367c22394a1358c9cefa0cb5d0b64b9b2b3f4" style="text-decoration:none">M+ La Liga TV Hypermotion (dial 56)</a><br>
 <a href="acestream://931b1984badcb821df7b47a66ac0835ac871b51c" style="text-decoration:none">M+ Liga de Campeones (dial 60)</a><br>
 <a href="acestream://e2e2aca792aae5da19995ac516b1d620531bd49c" style="text-decoration:none">M+ Liga de Campeones</a><br>
 <a href="acestream://ad372cba73aa0ece207a79532b3e30b731136bb2" style="text-decoration:none">M+ Liga de Campeones</a><br>
