--- a/io.html
+++ b/io.html
@@ -88,7 +88,7 @@
 <a href="acestream://f031f5728b32f6089dda28edebe990cf198108d8" style="text-decoration:none">M+ La Liga TV (dial 54)</a><br>
 <a href="acestream://1969c27658d4c8333ab2c0670802546121a774a5" style="text-decoration:none">M+ La Liga TV (dial 54)</a><br>
 <a href="acestream://2709d0ab86cb6ce7ba4d3ad188d7fa80668f2924" style="text-decoration:none">M+ Laliga Hypermotion</a><br>
-<a href="acestream://d81b4f2f3fde433539c097b2edc9b587ca47b087" style="text-decoration:none">M+ Laliga TV 2 Hypermotion</a><br>
+<a href="acestream://d81b4f2f3fde433539c097b2edc9b587ca47b087" style="text-decoration:none">M+ Laliga TV 2 Hypermotion (dial 59)</a><br>
 <a href="acestream://4c46585214b23b1d802ef2168060c7649a3894cf" style="text-decoration:none">M+ La Liga Hypermotion (dial 56)</a><br>
 <a href="acestream://06b367c22394a1358c9cefa0cb5d0b64b9b2b3f4" style="text-decoration:none">M+ La Liga TV Hypermotion (dial 56)</a><br>
 <a href="acestream://931b1984badcb821df7b47a66ac0835ac871b51c" style="text-decoration:none">M+ Liga de Campeones (dial 60)</a><br>
