--- a/io.html
+++ b/io.html
@@ -33,9 +33,9 @@
 <a href="acestream://75251ba975132ec9a202806ba5bf606e87280c96" style="text-decoration:none">DAZN Liga (dial 55)</a><br>
 <a href="acestream://a3bca895c58d3fc7d5e4259d3d5e3cf0291d1914" style="text-decoration:none">DAZN Laliga</a><br>
 <a href="acestream://1960a9be8ae9e8c755330218eac4c5805466290a" style="text-decoration:none">DAZN Laliga</a><br>
-<a href="acestream://8ca07071b39185431f8e940ec98d1add9e561639" style="text-decoration:none">DAZN 1</a><br>
-<a href="acestream://eaff9293c76a324c750ef5094c2a4e2c96518d1f" style="text-decoration:none">DAZN 1</a><br>
-<a href="acestream://61148b0b23b240ac1d6d9f2bdd793dc540f29618" style="text-decoration:none">DAZN 1</a><br>
+<a href="acestream://8ca07071b39185431f8e940ec98d1add9e561639" style="text-decoration:none">DAZN 1 (dial 70)</a><br>
+<a href="acestream://eaff9293c76a324c750ef5094c2a4e2c96518d1f" style="text-decoration:none">DAZN 1 (dial 70)</a><br>
+<a href="acestream://61148b0b23b240ac1d6d9f2bdd793dc540f29618" style="text-decoration:none">DAZN 1 (dial 70)</a><br>
 <a href="acestream://897e73c9d578848f596585314ecb9ae067c0e229" style="text-decoration:none">DAZN 1 Bar HD [DE]</a><br>
 <a href="acestream://7aa402bab9fff43258fbcf401881a39475f30aaf" style="text-decoration:none">DAZN 2 (dial 65)</a><br>
 <a href="acestream://60dbeeb299ec04bf02bc7426d827547599d3d9fc" style="text-decoration:none">DAZN 2 (dial 65)</a><br>
