--- a/io.html
+++ b/io.html
@@ -108,6 +108,7 @@
 <a href="acestream://b1e5abc48195b7ca9b2ee1b352e790eb9f7292e3" style="text-decoration:none">M+</a><br>
 <a href="acestream://4ce55db7e578ff52a6e526cf610e477464b8a99f" style="text-decoration:none">Polsat Sport Premium 1 (PL)</a><br>
 <a href="acestream://3147c586346aee00c005d1caa55204d38678c95f" style="text-decoration:none">Polsat Sport Premium 2 (PL)</a><br>
+<a href="acestream://66cb91c24b61280ba514c72e8ef2a1432b20d2b3" style="text-decoration:none">Polsat 2</a><br>
 <a href="acestream://ef2cf11fc83f4f15a33c9a514a7afd2bce73122f" style="text-decoration:none">Polsat Sport Extra (PL)</a><br>
 <a href="acestream://92b6ba09dae4bbb8a67a405125d08ca8d15380ee" style="text-decoration:none">Polsat Sport (PL)</a><br>
 <a href="acestream://4903ca695edb64bc72ae29eb85a5333ba0139537" style="text-decoration:none">Premier Sports 2 (UK)</a><br>
