--- a/io.html
+++ b/io.html
@@ -118,7 +118,7 @@
 <a href="https://rmtv.akamaized.net/hls/live/2043153/rmtv-es-web/master.m3u8" style="text-decoration:none">RealMadrid TV</a><br>
 <a href="acestream://04448c3ca0b7518819491e468adbabc8a2551bd7" style="text-decoration:none">Sport 4 [PL] Canal +</a><br>
 <a href="acestream://5e94200ae8b1d95cb559fb150e5993d92e15d4e7" style="text-decoration:none">Sport Digital [DE]</a><br>
-<a href="acestream://eab7aeef0218ce8b0752e596e4792b69eda4df5e" style="text-decoration:none">ky Sports Main Event</a><br>
+<a href="acestream://eab7aeef0218ce8b0752e596e4792b69eda4df5e" style="text-decoration:none">Sky Sports Main Event</a><br>
 <a href="acestream://ec5eabe0144ccfffc337e1d6708e2afb81d0638e" style="text-decoration:none">Sky Sports Premier League [UK]</a><br>
 <a href="acestream://8dbe2d515e9131fa311353537736f8c94be9b26d" style="text-decoration:none">Sky Sports Football [UK]</a><br>
 <a href="acestream://b04372b9543d763bd2dbd2a1842d9723fd080076" style="text-decoration:none">Sky Sports F1 [DE]</a><br>
