--- a/io.html
+++ b/io.html
@@ -84,8 +84,7 @@
 <a href="acestream://d00223931b1854163e24c5c22475015d7d45c112" style="text-decoration:none">M+ Deportes	(dial 63)</a><br>
 <a href="acestream://e5fa927d9a017f4523fdb62774a0aec457985bfa" style="text-decoration:none">M+ Deportes (dial 63)</a><br>
 <a href="acestream://e6f06d697f66a8fa606c4d61236c24b0d604d917" style="text-decoration:none">M+ Deportes 2</a><br>
-<a href="acestream://8587ed8ac36ac477e1d4176d3159a38bd154d4ce" style="text-decoration:none">M+ Deportes 6</a><br>
-
+<a href="acestream://8587ed8ac36ac477e1d4176d3159a38bd154d4ce" style="text-decoration:none">M+ Deportes 6 (dial 193)</a><br>
 <a href="acestream://67654e63b5065cdaa6c8e8d41bb5428b42b32830" style="text-decoration:none">M+ Ellas Vamos</a></br>
 <a href="acestream://4f945b0ba4206fa2676b61e9eaa465ac3dcc8122" style="text-decoration:none">M+ Golf	(dial 67)</a><br>
 <a href="acestream://9a4f3ae6563668b7709dac509dedc709441b3fd9" style="text-decoration:none">M+ Golf</a><br>
