--- a/io.html
+++ b/io.html
@@ -83,7 +83,7 @@
 <a href="acestream://a203f6b935a8ad8659c4c76c1d9c13afa6368ef2" style="text-decoration:none">Match ТВ HD [RU]</a><br>
 <a href="acestream://d00223931b1854163e24c5c22475015d7d45c112" style="text-decoration:none">M+ Deportes	(dial 63)</a><br>
 <a href="acestream://e5fa927d9a017f4523fdb62774a0aec457985bfa" style="text-decoration:none">M+ Deportes (dial 63)</a><br>
-<a href="acestream://e6f06d697f66a8fa606c4d61236c24b0d604d917" style="text-decoration:none">M+ Deportes 2</a><br>
+<a href="acestream://e6f06d697f66a8fa606c4d61236c24b0d604d917" style="text-decoration:none">M+ Deportes 2 (dial 64)</a><br>
 <a href="acestream://8587ed8ac36ac477e1d4176d3159a38bd154d4ce" style="text-decoration:none">M+ Deportes 6 (dial 193)</a><br>
 <a href="acestream://aee0a595220e0f1c2fee725fd1dbc602d7152a9a" style="text-decoration:none">M+ Deportes 6 (dial 193)</a><br>
 
