--- a/io.html
+++ b/io.html
@@ -41,9 +41,9 @@
 <a href="acestream://12ea555d431dbe51fc8e4ca745aec09fe22a4865" style="text-decoration:none">DAZN 2 BAR HD [DE]</a><br>
 <a href="acestream://a8ffddef56f082d4bb5c0be0d3d2fdd8c16dbd97" style="text-decoration:none">DAZN 3 (dial 196)</a><br>
 <a href="acestream://2fcdf7a19c0858f686efdfabd3c8c2b92bf6bcfd" style="text-decoration:none">DAZN 4 (dial 197)</a><br>
-<a href="acestream://5789ca155323664edd293b848606688edf803f4d" style="text-decoration:none">DAZN F1</a><br>
-<a href="acestream://9dad717d99b29a05672166258a77c25b57713dd5" style="text-decoration:none">DAZN F1</a><br>
-<a href="acestream://e1fcad9de0c782c157fde6377805c58297ab65c2" style="text-decoration:none">DAZN F1</a><br>
+<a href="acestream://5789ca155323664edd293b848606688edf803f4d" style="text-decoration:none">DAZN F1 (dial 69)</a><br>
+<a href="acestream://9dad717d99b29a05672166258a77c25b57713dd5" style="text-decoration:none">DAZN F1 (dial 69)</a><br>
+<a href="acestream://e1fcad9de0c782c157fde6377805c58297ab65c2" style="text-decoration:none">DAZN F1 (dial 69)</a><br>
 <a href="acestream://aa82e7d4f03061f2144a2f4be22f2e2210d42280" style="text-decoration:none">DAZN Laliga</a><br>
 <a href="acestream://8c6a3a49e43b6d05ac93b83fe4a41660caffae01" style="text-decoration:none">DEIMA SPORT<br>
 <a href="acestream://5e4cd48c79f991fcbee2de8b9d30c4b16de3b952" style="text-decoration:none">Eurosport 1</a><br>
