--- a/io.html
+++ b/io.html
@@ -63,7 +63,8 @@
 <a href="acestream://621f7215bb1f5593aa118e8540a1bb3aac11ffe4" style="text-decoration:none">ETB 2</a><br>
 <a href="https://multimedia.eitb.eus/live-content/oka1hd-hls/master.m3u8" style="text-decoration:none">ETB Deportes</a><br>
 <a href="acestream://5228b40ae1e45c02ee815e82586641eec40a7b81" style="text-decoration:none">ETB Deportes</a><br>
-<a href="acestream://2ce71f25114cf5fbf04816bcb1be980fb6676064" style="text-decoration:none">Formula 1 TV pro 1080p</a></br>
+<a href="acestream://2ce71f25114cf5fbf04816bcb1be980fb6676064" style="text-decoration:none">Formula F1 TV pro 1080p</a></br>
+<a href="acestream://7039fe951102d492496eb3ef4f9e8efc07ba14d7" style="text-decoration:none">Formula F1 TV</a></br>
 <a href="acestream://63ab9528b16e536be0da44d6f5aceac357292b95" style="text-decoration:none">Fox Sports Laliga</a></br>
 <a href="acestream://cba8d369eac629b577750edb90370cd1c5fb03b7" style="text-decoration:none">Fox Sports 2 HD [US]</a><br>
 <a href="acestream://5a8d60f4c8e558f8ae5acad7c75f455928ce0c2e" style="text-decoration:none">Gol Mundial</a></br>
