--- a/io.html
+++ b/io.html
@@ -19,7 +19,7 @@
 <td colspan="2">
 <H3><center><b>Archivo Canales</b></H3><center>Fecha activos:  <i>Septiembre</i></center></td></tr>
 <td colspan="2"><br>
-<a href="https://ztnr.rtve.es/ztnr/1694255.m3u8" style="text-decoration:none">24h</a><br>
+<a href="https://ztnr.rtve.es/ztnr/1694255.m3u8" style="text-decoration:none">24h (con chrome y extensión m3u8</a><br>
 <a href="acestream://16150dafbbd4515a8b539a8e21e0f083f86416da" style="text-decoration:none">abc</a><br>
 <a href="acestream://47c1b3a68d03bd190fed521d144ad08fa0f195f3" style="text-decoration:none">beIN Sports [Haber]</a><br>
 <a href="acestream://bba1905fcd1c4975aec544047bf8e4cd23ce3fe0" style="text-decoration:none">beIN Sports 1 [BE]</a><br>
