--- a/io.html
+++ b/io.html
@@ -24,7 +24,7 @@
 <a href="acestream://47c1b3a68d03bd190fed521d144ad08fa0f195f3" style="text-decoration:none">beIN Sports [Haber]</a><br>
 <a href="acestream://bba1905fcd1c4975aec544047bf8e4cd23ce3fe0" style="text-decoration:none">beIN Sports 1 [BE]</a><br>
 <a href="acestream://118416583faa3fb4f03800173429b6b844b43a52" style="text-decoration:none">beIN Sports 1 HD [TR]</a><br>
-<a href="acestream://48bee10b883f17c7186d60f1e8022dca0ba41a05" style="text-decoration:none">beIN Sports HD 2 [TR]</a></br>
+<a href="acestream://48bee10b883f17c7186d60f1e8022dca0ba41a05" style="text-decoration:none">beIN Sports 2 HD [TR]</a></br>
 <a href="acestream://ed81c333815247536edfcdb2755147e8c4144d62" style="text-decoration:none">beIN Sports 3 HD [TR]</a><br>
 <a href="acestream://efc60cfe5e3a349baa02bcc49f6647c21a9c3c5b" style="text-decoration:none">BT / TNT sport 1 [UK]</a><br>
 <a href="acestream://d63d8a57cf471394bfa9f619bbd68b01ae27a801" style="text-decoration:none">BT Sport 2 (UK)</a><br>
