--- a/io.html
+++ b/io.html
@@ -27,9 +27,9 @@
 <a href="acestream://48bee10b883f17c7186d60f1e8022dca0ba41a05" style="text-decoration:none">beIN Sports 2 HD [TR]</a></br>
 <a href="acestream://ed81c333815247536edfcdb2755147e8c4144d62" style="text-decoration:none">beIN Sports 3 HD [TR]</a><br>
 <a href="acestream://efc60cfe5e3a349baa02bcc49f6647c21a9c3c5b" style="text-decoration:none">BT / TNT sport 1 [UK]</a><br>
-<a href="acestream://d63d8a57cf471394bfa9f619bbd68b01ae27a801" style="text-decoration:none">BT Sport 2 (UK)</a><br>
-<a href="acestream://5f966c123759de46dff29c379266b7a403452033" style="text-decoration:none">BT Sport 3 (UK)</a><br>
-<a href="acestream://fc5089d8e1519872fdf951779ccbca913acc9bce" style="text-decoration:none">BT Sport 4 / ESPN [UK]</a><br>
+<a href="acestream://d63d8a57cf471394bfa9f619bbd68b01ae27a801" style="text-decoration:none">BT / TNT Sport 2 (UK)</a><br>
+<a href="acestream://5f966c123759de46dff29c379266b7a403452033" style="text-decoration:none">BT / TNT Sport 3 (UK)</a><br>
+<a href="acestream://fc5089d8e1519872fdf951779ccbca913acc9bce" style="text-decoration:none">BT / TNT Sport 4 / ESPN [UK]</a><br>
 
 <a href="acestream://162942adc047d0f78eac056effbe5bbec54a5e51" style="text-decoration:none">DAZN</a><br>
 <a href="acestream://e454681a152a86da504e63694f17f90d0586867d" style="text-decoration:none">DAZN</a><br>
