--- a/io.html
+++ b/io.html
@@ -58,7 +58,7 @@
 <a href="acestream://b146ee4b6e16c9df58e27bd02ffd6cea840ff212" style="text-decoration:none">Eleven Sports 3 HD [PL]</a><br>
 <a href="acestream://458a0ddd7d193f6d2750cd14d03a47f47a808e09" style="text-decoration:none">Eleven Sports 4 HD [PL]</a><br>
 <a href="acestream://0f32c0131a2d9444996410801f4e18b04384db98" style="text-decoration:none">Eleven Sports 4 DAZN [BE]</a><br>
-<a href="acestream://4dbe63b44fc4f439f5b634c0d2aa7e0cccad808a" style="text-decoration:none">Eleven Sports 5 (BE)</a><br>
+<a href="acestream://4dbe63b44fc4f439f5b634c0d2aa7e0cccad808a" style="text-decoration:none">Eleven Sports 5 [BE]</a><br>
 <a href="acestream://50b6d2b5fd59fefb9f4fd2176994d418f2b94a80" style="text-decoration:none">Eleven Sports 6 [BE]</a><br>
 <a href="https://directes-tv-cat.ccma.cat/live-origin/esport3-hls/master.m3u8" style="text-decoration:none">Esport 3 GEO CAT</a><br>
 <a href="acestream://2bac673f7fc25abda5f902850ce9f8c04a2b2056" style="text-decoration:none">ETB 1</a><br>
