--- a/io.html
+++ b/io.html
@@ -69,9 +69,9 @@
 <a href="acestream://7039fe951102d492496eb3ef4f9e8efc07ba14d7" style="text-decoration:none">Formula F1 TV</a></br>
 <a href="acestream://cba8d369eac629b577750edb90370cd1c5fb03b7" style="text-decoration:none">Fox Sports 2 HD [US]</a><br><br>
 
-<a href="https://ztnr.rtve.es/ztnr/1688877.m3u8" style="text-decoration:none">La 1</a><br>
-<a href="acestream://02b9307c5c97c86914cc5939d6bbeb5b4ec60b47"  style="text-decoration:none">La 1</a><br>
-<a href="https://ztnr.rtve.es/ztnr/1688885.m3u8" style="text-decoration:none">La 2</a><br>
+<a href="https://ztnr.rtve.es/ztnr/1688877.m3u8" style="text-decoration:none">La 1 TVE</a><br>
+<a href="acestream://02b9307c5c97c86914cc5939d6bbeb5b4ec60b47"  style="text-decoration:none">La 1 TVE</a><br>
+<a href="https://ztnr.rtve.es/ztnr/1688885.m3u8" style="text-decoration:none">La 2 TVE</a><br>
 <a href="acestream://501141c649a2b78c4965cbf3257224181cc55072" style="text-decoration:none">Magenta Sport 1 HD [DE]</a><br>
 <a href="acestream://8baf53760a03aa51e10134509f124e27b3be75cd" style="text-decoration:none">Match Football 1 HD</a><br>
 
