--- a/io.html
+++ b/io.html
@@ -60,7 +60,7 @@
 <a href="acestream://0f32c0131a2d9444996410801f4e18b04384db98" style="text-decoration:none">Eleven Sports 4 DAZN [BE]</a><br>
 <a href="acestream://4dbe63b44fc4f439f5b634c0d2aa7e0cccad808a" style="text-decoration:none">Eleven Sports 5 [BE]</a><br>
 <a href="acestream://50b6d2b5fd59fefb9f4fd2176994d418f2b94a80" style="text-decoration:none">Eleven Sports 6 [BE]</a><br>
-<a href="https://directes-tv-cat.ccma.cat/live-origin/esport3-hls/master.m3u8" style="text-decoration:none">Esport 3 GEO CAT</a><br>
+<a href="https://directes-tv-cat.ccma.cat/live-origin/esport3-hls/master.m3u8" style="text-decoration:none">Esport 3 GEO CAT (con chrome y extensión m3u8)</a><br>
 <a href="acestream://2bac673f7fc25abda5f902850ce9f8c04a2b2056" style="text-decoration:none">ETB 1</a><br>
 <a href="acestream://621f7215bb1f5593aa118e8540a1bb3aac11ffe4" style="text-decoration:none">ETB 2</a><br>
 <a href="acestream://5228b40ae1e45c02ee815e82586641eec40a7b81" style="text-decoration:none">ETB Deportes</a><br><br>
@@ -69,9 +69,9 @@
 <a href="acestream://7039fe951102d492496eb3ef4f9e8efc07ba14d7" style="text-decoration:none">Formula F1 TV</a></br>
 <a href="acestream://cba8d369eac629b577750edb90370cd1c5fb03b7" style="text-decoration:none">Fox Sports 2 HD [US]</a><br><br>
 
-<a href="https://ztnr.rtve.es/ztnr/1688877.m3u8" style="text-decoration:none">La 1 TVE</a><br>
+<a href="https://ztnr.rtve.es/ztnr/1688877.m3u8" style="text-decoration:none">La 1 TVE (con chrome y extensión m3u8)</a><br>
 <a href="acestream://02b9307c5c97c86914cc5939d6bbeb5b4ec60b47"  style="text-decoration:none">La 1 TVE</a><br>
-<a href="https://ztnr.rtve.es/ztnr/1688885.m3u8" style="text-decoration:none">La 2 TVE</a><br><br>
+<a href="https://ztnr.rtve.es/ztnr/1688885.m3u8" style="text-decoration:none">La 2 TVE (con chrome y extensión m3u8)</a><br><br>
 
 <a href="acestream://501141c649a2b78c4965cbf3257224181cc55072" style="text-decoration:none">Magenta Sport 1 HD [DE]</a><br>
 <a href="acestream://8baf53760a03aa51e10134509f124e27b3be75cd" style="text-decoration:none">Match Football 1 HD</a><br>
@@ -123,7 +123,7 @@
 <a href="acestream://4903ca695edb64bc72ae29eb85a5333ba0139537" style="text-decoration:none">Premier Sports 2 (UK)</a><br>
 <a href="acestream://0ec3f3786318acd8dca2588f74c3759cda76cd11" style="text-decoration:none">RealMadrid TV</a><br>
 <a href="acestream://0827cf7d290967985892965c6e61244a479d6dcd" style="text-decoration:none">RealMadrid TV</a><br>
-<a href="https://rmtv.akamaized.net/hls/live/2043153/rmtv-es-web/master.m3u8" style="text-decoration:none">RealMadrid TV</a><br>
+<a href="https://rmtv.akamaized.net/hls/live/2043153/rmtv-es-web/master.m3u8" style="text-decoration:none">RealMadrid TV (con chrome y extensión m3u8)</a><br>
 
 <a href="acestream://42fe2ce3ef6b92653a74d85b6e98c2ba0abee707" style="text-decoration:none">Setanta Sports 1</a><br>
 <a href="acestream://04448c3ca0b7518819491e468adbabc8a2551bd7" style="text-decoration:none">Sport 4 [PL] Canal +</a><br>
@@ -138,9 +138,9 @@
 <a href="acestream://aa9e353457d273108ec57dc1a449d66defb66b6a" style="text-decoration:none">TVG Galicia</a><br>
 <a href="acestream://dfbeae99e6da47a8f10be96e28ae1ba600cd84bc" style="text-decoration:none">TVG 2</a><br>
 <a href="acestream://e2395d28ad19423212fd3aa0e81f387db3e8bb9f" style="text-decoration:none">TDP</a><br>
-<a href="https://ztnr.rtve.es/ztnr/1712295.m3u8" style="text-decoration:none">Teledeporte GEO</a><br>
+<a href="https://ztnr.rtve.es/ztnr/1712295.m3u8" style="text-decoration:none">Teledeporte GEO (con chrome y extensión m3u8)</a><br>
 <a href="acestream://dec96c86080c26ddf667ea90adfb513a40007a0b" style="text-decoration:none">Viasat sport HD [RU]</a><br>
-<a href="https://tv.radiocast.es:5443/vinxtv/streams/vinxtvlive.m3u8" style="text-decoration:none">Vinx TV Asturias</a><br><br>
+<a href="https://tv.radiocast.es:5443/vinxtv/streams/vinxtvlive.m3u8" style="text-decoration:none">Vinx TV Asturias (con chrome y extensión m3u8)</a><br><br>
 
 
 <br><i>En Revisión:</i><br><br>
