--- a/io.html
+++ b/io.html
@@ -90,7 +90,7 @@
 
 <a href="acestream://67654e63b5065cdaa6c8e8d41bb5428b42b32830" style="text-decoration:none">M+ Ellas Vamos</a></br>
 <a href="acestream://4f945b0ba4206fa2676b61e9eaa465ac3dcc8122" style="text-decoration:none">M+ Golf	(dial 67)</a><br>
-<a href="acestream://9a4f3ae6563668b7709dac509dedc709441b3fd9" style="text-decoration:none">M+ Golf</a><br>
+<a href="acestream://9a4f3ae6563668b7709dac509dedc709441b3fd9" style="text-decoration:none">M+ Golf 2 (dial 68)</a><br>
 <a href="acestream://37d42d2b5d2278e6bb5810329a5f220867b3cf0c" style="text-decoration:none">M+ La Liga</a><br>
 <a href="acestream://7d8c87e057be98f00f22e23b23fbf08999e4b02f" style="text-decoration:none">M+ Laliga TV</a><br>
 <a href="acestream://80126b240f3e4e004754fd8f8103e857ab2556a0" style="text-decoration:none">M+ Laliga TV 2 (dial 57)</a><br>
