--- a/io.html
+++ b/io.html
@@ -101,7 +101,7 @@
 <a href="acestream://2709d0ab86cb6ce7ba4d3ad188d7fa80668f2924" style="text-decoration:none">M+ Laliga TV 2 Hypermotion (dial 59)</a><br>
 <a href="acestream://d81b4f2f3fde433539c097b2edc9b587ca47b087" style="text-decoration:none">M+ Laliga TV 2 Hypermotion (dial 59)</a><br>
 <a href="acestream://931b1984badcb821df7b47a66ac0835ac871b51c" style="text-decoration:none">M+ Liga de Campeones (dial 60)</a><br>
-<a href="acestream://e2e2aca792aae5da19995ac516b1d620531bd49c" style="text-decoration:none">M+ Liga de Campeones</a><br>
+<a href="acestream://e2e2aca792aae5da19995ac516b1d620531bd49c" style="text-decoration:none">M+ Liga de Campeones (dial 60)</a><br>
 <a href="acestream://fc2fe31b0bce25e2dc7ab4d262bf645e2be5a393" style="text-decoration:none">M+ Liga de Campeones 2 (dial 57)</a><br>
 <a href="acestream://ad372cba73aa0ece207a79532b3e30b731136bb2" style="text-decoration:none">M+ Liga de Campeones 3 (dial 62)</a><br>
 <a href="acestream://859bb6295b8d0f224224d3063d9db7cdeca03122" style="text-decoration:none">M+ Vamos (dial 8)</a><br>
