--- a/io.html
+++ b/io.html
@@ -91,7 +91,7 @@
 <a href="acestream://67654e63b5065cdaa6c8e8d41bb5428b42b32830" style="text-decoration:none">M+ Ellas Vamos</a></br>
 <a href="acestream://4f945b0ba4206fa2676b61e9eaa465ac3dcc8122" style="text-decoration:none">M+ Golf	(dial 67)</a><br>
 <a href="acestream://9a4f3ae6563668b7709dac509dedc709441b3fd9" style="text-decoration:none">M+ Golf 2 (dial 68)</a><br>
-<a href="acestream://7d8c87e057be98f00f22e23b23fbf08999e4b02f" style="text-decoration:none">M+ Laliga TV (dial 54)</a><br>
+<a href="acestream://7d8c87e057be98f00f22e23b23fbf08999e4b02f" style="text-decoration:none">M+ LaLiga TV (dial 54)</a><br>
 <a href="acestream://f031f5728b32f6089dda28edebe990cf198108d8" style="text-decoration:none">M+ LaLiga TV (dial 54)</a><br>
 <a href="acestream://1969c27658d4c8333ab2c0670802546121a774a5" style="text-decoration:none">M+ LaLiga TV (dial 54)</a><br>
 <a href="acestream://80126b240f3e4e004754fd8f8103e857ab2556a0" style="text-decoration:none">M+ Laliga TV 2 (dial 57)</a><br>
